--- a/LAM_Reviews.html
+++ b/LAM_Reviews.html
@@ -33,15 +33,20 @@
             </li>
         </ul>
     </nav>
-    <h1> Welkom bij het <br> Lisser Art Museum </h1>        
+    <h1> <br> Reviews </h1>        
 
 
     <span class="line"></span>                              
 
     <p style="color:rgb(255, 255, 255)">                  
-        LAM is een museum op Landgoed Keukenhof, op steenworp afstand van Kasteel Keukenhof in de Zuid-Hollandse plaats Lisse. In het museum hebben alle kunstwerken iets te maken met voedsel en consumptie.  
-    </p>
-    <button class="ticket">Tickets</button> <a href="Lam_tickets.html">Tickets</a>           
+     
+    1.   5*	    Andre Berkhoff:  Leuk museum hele aardige behulpzame suppoosten :-)<br>
+    <br>
+    2.   3* 	Barbara Venema:  Leuk museum, mooi gebouw en bijzondere kunstwerken. Alleen jammer dat het concept van kijken zonder informatiebordjes bij de kunst zo dwingend is. Erg irritant en paternalistisch. Laat mensen zelf kiezen ipv het op te leggen.<br>
+    <br>
+    3.   4*    Maarten Holtus:  Leuk museum, mooi gebouw en bijzondere kunstwerken. Alleen jammer dat het concept van kijken zonder informatiebordjes bij de kunst zo dwingend is. Erg irritant en paternalistisch. Laat mensen zelf kiezen i.p.v. het op te leggen.
+    <br>  
+    <button class="ticket">Tickets</button>  <a href="Lam_tickets.html">Tickets</a>          
 <script src="LAM.js"></script>
 </body>
 </html>
