--- a/Lam_tickets.html
+++ b/Lam_tickets.html
@@ -23,7 +23,7 @@
     <nav>
         <ul>
             <li>
-                <a href="LAM_Reviews.html">Reviews</a>                               
+                <a href="LAM_Reviews.html">Reviews</a>                            
             </li>
             <li>
                 <a href="#">Collectie overzicht</a>                 <!--Link Nodig-->
@@ -33,15 +33,25 @@
             </li>
         </ul>
     </nav>
-    <h1> Welkom bij het <br> Lisser Art Museum </h1>        
+    <h1> Tickets </h1>        
 
 
     <span class="line"></span>                              
 
     <p style="color:rgb(255, 255, 255)">                  
-        LAM is een museum op Landgoed Keukenhof, op steenworp afstand van Kasteel Keukenhof in de Zuid-Hollandse plaats Lisse. In het museum hebben alle kunstwerken iets te maken met voedsel en consumptie.  
+     We kijken er naar uit om je vanaf woensdag 10 februari te ontmoeten in het museum. Als de heropening definitief is, kun je vanaf deze plek je tickets bestellen.<br>
+     <br>
+    Online zijn we altijd open. Lees hier wat we zoal voor je in petto hebben. <br>
+    <br>
+    Zou je in deze periode naar het museum komen? Geen zorgen, we annuleren de kaartjes en zorgen dat het bedrag binnenkort op je rekening staat. Zodra we weer openen, kun je een nieuwe starttijd boeken. Heel graag tot dan!<br> 
+    <br>
+    Hartelijke groeten en blijf gezond,<br>
+    <br>
+    het LAM team
+
+
     </p>
-    <button class="ticket">Tickets</button> <a href="Lam_tickets.html">Tickets</a>           
+    <button class="ticket">Tickets</button> <a href="Lam_tickets.html">Tickets</a>          
 <script src="LAM.js"></script>
 </body>
 </html>
