--- a/LAM.html
+++ b/LAM.html
@@ -31,6 +31,9 @@
             <li>
                 <a href="quiz/quiz.html">Quiz</a>                                
             </li>
+            <li>
+                <a href="https://www.google.nl/maps/place/LAM+museum/@52.2681096,4.5399901,17z/data=!3m1!4b1!4m5!3m4!1s0x47c5c204186e07d5:0xf506371f4cb856ce!8m2!3d52.2681096!4d4.5421788" target="_blank">Locatie.</a>                                    <!--Google maps-->
+            </li>
         </ul>
     </nav>
     <h1> Welkom bij het <br> Lisser Art Museum </h1>        
