--- a/LAM_Reviews.html
+++ b/LAM_Reviews.html
@@ -26,10 +26,13 @@
                 <a href="LAM_Reviews.html">Reviews</a>                               
             </li>
             <li>
-                <a href="#">Collectie overzicht</a>                 <!--Link Nodig-->
+                <a href="collectieoverzicht.html">Collectie overzicht</a>                 
             </li>
             <li>
                 <a href="quiz/quiz.html">Quiz</a>                                
+            </li>
+            <li>
+                <a href="https://www.google.nl/maps/place/LAM+museum/@52.2681096,4.5399901,17z/data=!3m1!4b1!4m5!3m4!1s0x47c5c204186e07d5:0xf506371f4cb856ce!8m2!3d52.2681096!4d4.5421788" target="_blank">Locatie.</a>                                    <!--Google maps-->
             </li>
         </ul>
     </nav>
